# observer-pattern-python

./: README.md  pyproject.toml
src/: event_emitter.py  handlers.py  main.py  schema.py
